# dota2_local_modify

./: .gitignore  attribute_editor.py  build.bat  data.py  hero_constants.py  hero_editor.py  hero_name_map.txt  main.py  pyproject.toml  readme.md  requirement.txt  run.bat  skill_constants.py  skill_editor.py  tooltip.py  undo_manager.py  unpack.py
.github/workflows/: build.yml
